--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "formik": "^2.4.5",
         "moment": "^2.29.4",
+        "node-ray": "^1.21.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
+        "react-ray": "^1.1.2",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.16.0",
         "styled-components": "^5.3.11",
