--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "5balloons/livewire-tooltip": "^2.2",
+        "andcarpi/laravel-popper": "^0.9.4",
         "blade-ui-kit/blade-heroicons": "^2.4",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
