--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,10 +20,6 @@ jobs:
       - run: echo $(ssh-keyscan -p 22 ${{ secrets.SERVER_HOST }} )
       - name: Adding Known Hosts
         run: ssh-keyscan -p 22 ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
-#      - name: "Setup PHP"
-#        uses: shivammathur/setup-php@v2
-#        with:
-#          php-version: '8.2'
       - name: Setup NodeJS
         uses: actions/setup-node@v3
         with:
@@ -31,8 +27,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Update composer dependencies
         run: composer update --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-#      - name: Install composer Dependencies
-#        run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      - name: Install composer Dependencies
+        run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Install node dependencies
         run: npm install --force
       - name: Build assets
@@ -40,13 +36,11 @@ jobs:
       - name: Remove unnesesary files
         run: |
           rm -rf node_modules
+      - name: Remove unnesesary files on server side
+        run: ssh -p 22 ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SSH_DEPLOY_PATH }} && rm -r ./public/build/*  || true" #exit with 0
       - name: Deploy to server
-        run: ssh -p 22 administrator@192.168.0.220 "cd /services/plex-studio && git pull && composer install && ./vendor/bin/sail up -d"
-#      - name: Remove unnesesary files on server side
-#        run: ssh -p 22 ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SSH_DEPLOY_PATH }} && rm -r ./public/build/*  || true" #exit with 0
-#      - name: Deploy to server
-#        run: rsync -e 'ssh -p 22' -avz  . ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }}:${{ secrets.SSH_DEPLOY_PATH }}
-#      - name: chmod files
-#        run: ssh -p 22 ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SSH_DEPLOY_PATH }} && chmod -R 755 ."
+        run: rsync -e 'ssh -p 22' -avz  . ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }}:${{ secrets.SSH_DEPLOY_PATH }}
+      - name: chmod files
+        run: ssh -p 22 ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SSH_DEPLOY_PATH }} && chmod -R 755 ."
       #- name: Migrate database
       #  run: ssh -p 222 ${{secrets.SSH_USERNAME}}@${{ secrets.SERVER_HOST }} "cd ${{ secrets.SSH_DEPLOY_PATH }} && php82 artisan migrate --force"
