--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "livewire/volt": "^1.6",
         "power-components/livewire-powergrid": "^6.1",
         "tallstackui/tallstackui": "^1.33",
-        "usernotnull/tall-toasts": "^2.1"
+        "usernotnull/tall-toasts": "^2.1",
+        "league/flysystem-ftp": "^3.0",
+        "league/flysystem-sftp-v3": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
